# aoc-2020

./: Cargo.toml
day1/: Cargo.toml  solution.js
day1/src/: main.rs
day2/: solution.js
day3/: solution.js
js/: day1.js  day2.js  day3.js  lib.js  package.json
src/: lib.rs
