[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Steven Nance <steven@devtrw.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
phf = { version = "0.7.24", features = ["macros"] }
regex = "1"
lazy_static = "1.4.0"


